# realtime-api-web-console

./: .cursorrules  README.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy-backend-to-production.yml
backend/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
backend/src/: main.py
backend/src/domain/: prompt.py
backend/src/log/: logger.py
backend/src/presentation/: error_response.py
backend/src/presentation/controller/: create_voice_chat_session_controller.py  video_chat_controller.py  voice_chat_controller.py
backend/src/presentation/router/: gemini.py  realtime_apis.py  video_chat.py
backend/tests/domain/prompt/: test_get_system_prompt.py
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/public/: audio-processing.worklet.js
frontend/src/: instrumentation.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/: Camera.tsx  GeminiMessageForm.tsx  HomeContents.tsx  InputPromptForm.tsx  MessageCard.tsx  PromptInput.tsx  Providers.tsx
frontend/src/app/_components/_hooks/: useVideoDeviceList.ts
frontend/src/app/api/voices/: route.ts
frontend/src/app/video-chat/: page.tsx
frontend/src/app/video-chat/_components/: VideoChatContents.tsx  VideoChatForm.tsx
frontend/src/app/voice-chat/: page.tsx
frontend/src/app/voice-chat/_components/: InvalidPromptErrorMessage.tsx  VoiceChatContents.tsx  VoiceChatForm.tsx
frontend/src/lib/: openai.ts
frontend/src/logging/: logger.ts
